# dtcc-wrapper-tetgen

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README_2.md  REVIEW.md  adapter_tetgen.py  demo.py  pyproject.toml  vendor_tetgen.ps1  vendor_tetgen.sh
.github/workflows/: build-tests.yml  ci.yml  code-quality.yml
demos/: demo.py  test.py
dtcc_tetgen_wrapper/: __init__.py  switches.py  tetwrapio.py
dtcc_tetgen_wrapper/cpp/tetwrap/: __init__.py  tetwrap.cpp
dtcc_wrapper_tetgen/: __init__.py  adapter.py  tetwrapio.py
dtcc_wrapper_tetgen/cpp/tetwrap/: tetwrap.cpp
src/dtcc_wrapper_tetgen/: __init__.py  adapter.py  switches.py
src/dtcc_wrapper_tetgen/cpp/tetwrap/: CMakeLists.txt  __init__.py  tetwrap.cpp
tests/: conftest.py  test_adapter.py  test_integration.py  test_switches.py  test_tetwrapio.py
tetwrap/: CMakeLists.txt
