[build-system]
requires = [
    "scikit-build-core>=0.8.0",
    "pybind11>=2.11",
    "numpy>=1.22",
    "packaging",
]
build-backend = "scikit_build_core.build"

[project]
name = "dtcc-wrapper-tetgen"
version = "0.1.0"
description = "Pybind11-powered TetGen bindings with a lightweight Python adapter."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "DTCC Developers" },
]
dependencies = [
    "numpy>=1.22",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://example.com/dtcc-wrapper-tetgen"

[tool.scikit-build]
cmake.version = ">=3.18"
cmake.source-dir = "dtcc_wrapper_tetgen/cpp/tetwrap"
wheel.packages = ["dtcc_wrapper_tetgen"]
sdist.include = [
    "README.md",
    "MANIFEST.in",
    "dtcc_wrapper_tetgen",
]

[tool.scikit-build.cmake.define]
PYBIND11_FINDPYTHON = "ON"
