[build-system]
requires = [
    "scikit-build-core>=0.8.0",
    "pybind11>=2.11",
    "numpy>=1.22",
    "packaging",
]
build-backend = "scikit_build_core.build"

[project]
name = "dtcc-wrapper-tetgen"
version = "0.1.0"
description = "Pybind11-powered TetGen bindings with a lightweight Python adapter."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "DTCC Developers" },
]
dependencies = [
    "numpy>=1.22",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/dtcc-platform/dtcc-wrapper-tetgen"
Repository = "https://github.com/dtcc-platform/dtcc-wrapper-tetgen"
"Bug Tracker" = "https://github.com/dtcc-platform/dtcc-wrapper-tetgen/issues"

[tool.scikit-build]
cmake.version = ">=3.18"
cmake.source-dir = "dtcc_wrapper_tetgen/cpp/tetwrap"
wheel.packages = ["dtcc_wrapper_tetgen"]
sdist.include = [
    "README.md",
    "MANIFEST.in",
    "dtcc_wrapper_tetgen",
]

[tool.scikit-build.cmake.define]
PYBIND11_FINDPYTHON = "ON"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter checking
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
exclude = ["demos/", "tests/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = "dtcc_wrapper_tetgen.cpp.tetwrap.*"
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
include = "\.pyi?$"

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["dtcc_wrapper_tetgen"]

[tool.coverage.run]
source = ["dtcc_wrapper_tetgen"]
omit = ["*/tests/*", "*/demos/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == \"__main__\":",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
